src/objects/FSTR__Loop__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Loop</relationshipLabel>
        <relationshipName>Loop</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_Program_Year__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Program Year</label>
        <referenceTo>Client_Program_Year__c</referenceTo>
        <relationshipLabel>Loop</relationshipLabel>
        <relationshipName>Loop</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Program</label>
        <referenceTo>Client_Program__c</referenceTo>
        <relationshipLabel>Loop</relationshipLabel>
        <relationshipName>Loop</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Business_Process__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Process</label>
        <referenceTo>FSTR__Business_Process__c</referenceTo>
        <relationshipLabel>Loops</relationshipLabel>
        <relationshipName>Loops</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Loops</relationshipLabel>
        <relationshipName>Loops</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Loops</relationshipLabel>
        <relationshipName>Loops</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Completed_Date__c</fullName>
        <description>The datetime when the loop was completed.</description>
        <label>Completed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FSTR__Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Loops</relationshipLabel>
        <relationshipName>Loops</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__First_Iteration__c</fullName>
        <label>First Iteration</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FSTR__Iteration__c</fullName>
        <label>Iteration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSTR__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Loops</relationshipLabel>
        <relationshipName>Loops</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Loops</relationshipLabel>
        <relationshipName>Loops</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__PCE_Step_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Step Id</label>
        <referenceTo>FSTR__PCE_Step__c</referenceTo>
        <relationshipLabel>Loops</relationshipLabel>
        <relationshipName>Loops</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Parent_Object_Id__c</fullName>
        <externalId>true</externalId>
        <label>Parent Object Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Test_PCE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Test PCE</label>
        <referenceTo>FSTR__Test_PCE__c</referenceTo>
        <relationshipLabel>Loops</relationshipLabel>
        <relationshipName>Loops</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Leg__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Leg</label>
        <referenceTo>Leg__c</referenceTo>
        <relationshipLabel>Loop</relationshipLabel>
        <relationshipName>Loop</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Loop</label>
    <nameField>
        <displayFormat>L-{00000}</displayFormat>
        <label>Loop Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loops</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>